fixed sidebar left gap

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -51,7 +51,7 @@ This styles the sidebar on the left
 }
 
 .sidebar-hidden{
-    left: var(--mediumGap);
+    left: var(--smallGap);
 }
 
 /**
